DATA/RAW/VUL.bak/CVE-2012-2110/openssl-0.9.7e/tmp
asn1_d2i_read_bio#a_d2i_fp.c:1:30: error: unknown type name 'BIO'
static int asn1_d2i_read_bio(BIO *in, BUF_MEM **pb)
                             ^
asn1_d2i_read_bio#a_d2i_fp.c:1:39: error: unknown type name 'BUF_MEM'
static int asn1_d2i_read_bio(BIO *in, BUF_MEM **pb)
                                      ^
asn1_d2i_read_bio#a_d2i_fp.c:3:2: error: use of undeclared identifier 'BUF_MEM'
        BUF_MEM *b;
        ^
asn1_d2i_read_bio#a_d2i_fp.c:3:11: error: use of undeclared identifier 'b'
        BUF_MEM *b;
                 ^
asn1_d2i_read_bio#a_d2i_fp.c:7:2: error: use of undeclared identifier 'ASN1_CTX'
        ASN1_CTX c;
        ^
asn1_d2i_read_bio#a_d2i_fp.c:8:11: error: use of undeclared identifier 'HEADER_SIZE'
        int want=HEADER_SIZE;
                 ^
asn1_d2i_read_bio#a_d2i_fp.c:18:2: error: use of undeclared identifier 'b'
        b=BUF_MEM_new();
        ^
asn1_d2i_read_bio#a_d2i_fp.c:18:4: warning: implicit declaration of function 'BUF_MEM_new' is invalid in C99 [-Wimplicit-function-declaration]
        b=BUF_MEM_new();
          ^
asn1_d2i_read_bio#a_d2i_fp.c:19:6: error: use of undeclared identifier 'b'
        if (b == NULL)
            ^
asn1_d2i_read_bio#a_d2i_fp.c:19:11: error: use of undeclared identifier 'NULL'
        if (b == NULL)
                 ^
asn1_d2i_read_bio#a_d2i_fp.c:21:3: warning: implicit declaration of function 'ASN1err' is invalid in C99 [-Wimplicit-function-declaration]
                ASN1err(ASN1_F_ASN1_D2I_BIO,ERR_R_MALLOC_FAILURE);
                ^
asn1_d2i_read_bio#a_d2i_fp.c:21:11: error: use of undeclared identifier 'ASN1_F_ASN1_D2I_BIO'
                ASN1err(ASN1_F_ASN1_D2I_BIO,ERR_R_MALLOC_FAILURE);
                        ^
asn1_d2i_read_bio#a_d2i_fp.c:21:31: error: use of undeclared identifier 'ERR_R_MALLOC_FAILURE'
                ASN1err(ASN1_F_ASN1_D2I_BIO,ERR_R_MALLOC_FAILURE);
                                            ^
asn1_d2i_read_bio#a_d2i_fp.c:25:2: warning: implicit declaration of function 'ERR_clear_error' is invalid in C99 [-Wimplicit-function-declaration]
        ERR_clear_error();
        ^
asn1_d2i_read_bio#a_d2i_fp.c:32:9: warning: implicit declaration of function 'BUF_MEM_grow_clean' is invalid in C99 [-Wimplicit-function-declaration]
                        if (!BUF_MEM_grow_clean(b,len+want))
                             ^
asn1_d2i_read_bio#a_d2i_fp.c:32:28: error: use of undeclared identifier 'b'
                        if (!BUF_MEM_grow_clean(b,len+want))
                                                ^
asn1_d2i_read_bio#a_d2i_fp.c:34:5: warning: implicit declaration of function 'ASN1err' is invalid in C99 [-Wimplicit-function-declaration]
                                ASN1err(ASN1_F_ASN1_D2I_BIO,ERR_R_MALLOC_FAILURE);
                                ^
asn1_d2i_read_bio#a_d2i_fp.c:34:13: error: use of undeclared identifier 'ASN1_F_ASN1_D2I_BIO'
                                ASN1err(ASN1_F_ASN1_D2I_BIO,ERR_R_MALLOC_FAILURE);
                                        ^
asn1_d2i_read_bio#a_d2i_fp.c:34:33: error: use of undeclared identifier 'ERR_R_MALLOC_FAILURE'
                                ASN1err(ASN1_F_ASN1_D2I_BIO,ERR_R_MALLOC_FAILURE);
                                                            ^
asn1_d2i_read_bio#a_d2i_fp.c:37:6: warning: implicit declaration of function 'BIO_read' is invalid in C99 [-Wimplicit-function-declaration]
                        i=BIO_read(in,&(b->data[len]),want);
                          ^
asn1_d2i_read_bio#a_d2i_fp.c:37:20: error: use of undeclared identifier 'b'
                        i=BIO_read(in,&(b->data[len]),want);
                                        ^
asn1_d2i_read_bio#a_d2i_fp.c:40:5: warning: implicit declaration of function 'ASN1err' is invalid in C99 [-Wimplicit-function-declaration]
                                ASN1err(ASN1_F_ASN1_D2I_BIO,ASN1_R_NOT_ENOUGH_DATA);
                                ^
asn1_d2i_read_bio#a_d2i_fp.c:40:13: error: use of undeclared identifier 'ASN1_F_ASN1_D2I_BIO'
                                ASN1err(ASN1_F_ASN1_D2I_BIO,ASN1_R_NOT_ENOUGH_DATA);
                                        ^
asn1_d2i_read_bio#a_d2i_fp.c:40:33: error: use of undeclared identifier 'ASN1_R_NOT_ENOUGH_DATA'
                                ASN1err(ASN1_F_ASN1_D2I_BIO,ASN1_R_NOT_ENOUGH_DATA);
                                                            ^
asn1_d2i_read_bio#a_d2i_fp.c:48:24: error: use of undeclared identifier 'b'
                p=(unsigned char *)&(b->data[off]);
                                     ^
asn1_d2i_read_bio#a_d2i_fp.c:49:3: error: use of undeclared identifier 'c'
                c.p=p;
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
7 warnings and 20 errors generated.
